Support: Prevent author name from getting clipped in table listings.
Props aezazshekh.
Fixes #6847.


git-svn-id: https://meta.svn.wordpress.org/sites/trunk@13380 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-support/sass/site/_bbpress.scss
@@ -458,6 +458,10 @@ $paginationBreakPoint: "600px";
 			}
 		}
 
+		p.bbp-topic-meta span.bbp-author-name {
+			white-space: normal;
+		}
+
 		p.wporg-bbp-topic-site-url {
 			border-top: 1px solid #eee;
 			padding-top: 0.5rem;
